plugins/core/web-app/css/screen.css
html {
	height: 100%;
	width: 100%;
	overflow-x: hidden;
}

body{
    font-family: Arial;
    font-size: .75em;
    color: #333333;
    margin: 0;
    padding: 0;
}

ul, ol {
	list-style: none;
}

a {
	text-decoration: none;
	color: black;
}

.unread {
	font-weight: bolder;
}

.error{
	border: 2px solid #ff9600;
}
.error-message{
	background-image: url('../images/icons/error_on.png');
	background-repeat: no-repeat;
	background-position: left;
	min-width:18px;
	min-height:18px;
	padding: 2px 20px;
}

#address-error{
	position: relative;
	left: 150px;
}

.send-failed{
	background-image: url('../images/icons/error_on.png');
	background-repeat: no-repeat;
	background-position: right center;
}

/* FIXME */
/*Popup Dialogs (should be in jquery.ui.dialog.css, but image reference problems occur*/
/*this is due to using relative references and can be avoided*/

.ui-dialog .error-panel #error-icon{
	display:inline-block;
	background-image: url('../images/icons/error_on.png');
	background-repeat: no-repeat;
	min-width:18px;
	min-height:18px;
	padding-right: 10px;
	vertical-align: bottom;
}

.field{
	padding: 10px 0 0 23px;
}

.create {
	margin: 0 40px;
}

.hide {
	display:none;
	height:0;
}

/*Main*/
#logo {
       height: 40px;
       width: 36px;
}

#main{
    padding: 0;
    margin: 0;
    height: 85%;
}

#sidebar{
    position: fixed;
    top: 83px;
    bottom: 0;
    float: left;
    width: 17%;
    overflow-y: auto;
    overflow-x: hidden;
    border-right: 1px solid #9e9e9e;
    z-index: 50;
}

#sidebar ul{
    padding: 0;
    margin: 0;
    list-style: none;
}
#sidebar .main-list li h3{
    text-transform: uppercase;
    margin: 17px 17px 0 15px;
    padding-left: 25px;
}

#sidebar .sublist a{
    display: block;
    padding: 0 17px 0 40px;
}
#sidebar .sublist a.create{
    display: block;
    padding: 4px 0 0 0;
}


#sidebar .sublist{
    margin: 10px 0;
}

#sidebar .sublist li{
    padding: 5px 0;
    margin: 0;
}

.list-title{
    background-repeat: no-repeat;
}
#messages-tab #messages-list-title{
    background-image: url('../images/icons/messages.png');
}
#messages-tab .activities-list-title{
    background-image: url('../images/icons/activities.png');
}
#messages-tab #folders-list-title{
    background-image: url('../images/icons/folders.png');
}
#messages-tab #shows-list-title{
    background-image: url('../images/icons/shows.png');
}

#contacts-tab  #contacts-list-title{
    background-image: url('../images/icons/contacts.png');
}
#contacts-tab #groups-list-title{
    background-image: url('../images/icons/groups.png');
}
#contacts-tab  #smart-groups-list-title{
    background-image: url('../images/icons/smartgroups.png');
}

#archive-tab .sublist .archive-section-list{
	background-repeat: no-repeat;
	margin-left: 42px;
	height: 21px;
	padding: 4px 25px 0 25px;
}
#archive-tab .sublist #inbox{
    background-image: url('../images/icons/inboxarchive.png');
}
#archive-tab .sublist #sent{
    background-image: url('../images/icons/sentarchive.png');
}
#archive-tab .sublist #activity{
    background-image: url('../images/icons/activitiesarchive.png');
}
#archive-tab .sublist #folder{
    background-image: url('../images/icons/foldersarchive.png');
}

#sidebar #search-menu{
	margin-left: 17px;
	padding:0;
}
#sidebar #search-menu li h3{
	margin: 25px 0 0 0;
	padding:0;
}
#sidebar #search-menu .buttons, #sidebar #search-menu #extra-options-list{
	margin-right: 17px;
	padding:0;
}
#sidebar #search-menu .btn.create{
	width:100%;
	height:25px;
	padding: 2px 0;
	margin: 17px 0;
}
#sidebar #search-menu #extra-options-list{
	padding: 0 0 17px 23px;
	margin-bottom: 17px;
}
#sidebar #search-menu #extra-options-list li{
	padding-top: 5px;
}
#sidebar #search-menu .extra-option input{
	margin: 5px 0 0 17px;
}
#sidebar #search-menu #more-options{
	margin-bottom: 17px;
}
#sidebar #search-menu #search-btn{
	border-top: 1px solid #9e9e9e;
	padding-top: 17px;
	marign-top: 17px;
}
#sidebar #search-menu #clear{
	float: right;
}
#sidebar #search-menu .field{
	padding-left: 0;
}
#sidebar #search-menu #non-dates .field select, #sidebar #search-menu .field input[type=text]{
	width: 90%;
}
#sidebar #search-menu .dropdown{
	margin: 10px 30px 10px 0;
}

#content{
    padding: 0;
    margin: 0;
    background-color: #fff;
    float: right;
    width: 83%;
    height: 93%;
}

.section-header {
    position: fixed;
    z-index: 10;
    width: 83%;
    background-color: #fff;
    top: 83px;
}
.section-header .message-title, .section-header #archive-title, .section-header #contact-title{
    padding: 0;
    position: relative;
    margin: 0;
    min-height: 43px;
    padding: 0 17px;
}
.section-header .activity-title{
    margin: 0;
    min-height: 200px;
    height: 200px;
    padding: 0 17px;
}

.section-header .message-title h3, .section-header .activity-title h3, .section-header h3{
    text-transform: uppercase;
    padding:10px 0;
    padding-left: 28px;
    margin: 0;
    background-repeat: no-repeat;
    background-position: 6px 10px;
    float:left;
}

.section-header .button-list{
	list-style: none;
	float: right;
	margin: 0;
	padding: 10px 0px 10px 10px;
}
.section-header .activity-title .button-list{
	width:250px;
}
.section-header .activity-title .button-list li{
	padding: 10px 0;
	text-align: right;
	height:25px;
	width: 250px;
}
.section-header .message-title .button-list li, .section-header #archive-title .button-list li, #contact-header .button-list li{
	padding: 0 10px;
	text-align: right;
	display: inline;
	float: right;
}
.section-header .button-list .poll-btn, .section-header .button-list .activity-btn{
	width: 216px;
	float: right;
}
.section-header .activity-title #poll-graph-btn{
	position: fixed;
	top: 250px;
	right: 27px;
	padding-left: 25px;
	cursor: pointer;
}
.section-header .activity-title #poll-graph-btn.show-arrow{
	background-image: url('../images/icons/toggle_plus.png');
	background-repeat: no-repeat;
}
/* ... */

